corrections marge gauche section header et recherche ainsi que bordure formulaire de recherche version mobile

--- a/style.css
+++ b/style.css
@@ -530,10 +530,17 @@ footer {
 
     /*RESEARCH SECTION*/
 
+    .logo {
+        padding-left: 30px;
+    }
+    header > a {
+        margin-right: 30px;
+    }
     .research {
         width:100%;
         height:100%;
         align-items:flex-start;
+        padding-left: 30px;
     }
     .research .filters {
         width:100%;
@@ -616,7 +623,7 @@ footer {
     }
     .descritpion-popular-card {
         height:auto;
-        font-size: 1.2em;
+        font-size: 1.1em;
     }
     .popular-card img {
         width:100%;
@@ -739,7 +746,7 @@ footer {
         margin-bottom:20px;
     }
     .logo {
-        margin-left:20px;
+        padding-left: 20px;
     }
     header > a {
         margin-left:auto;
@@ -772,6 +779,9 @@ footer {
 
         /*RESEARCH SECTION*/
 
+    .research {
+        padding-left: unset;
+    }
     .research > h1 {
         font-size: 1.4em;
         text-align:start;
@@ -787,7 +797,6 @@ footer {
     }
     .search-bar {
         height:100%;
-        border: 1px solid rgb(242, 242, 242);
     }
     .research > form {
         width:auto;
@@ -1007,7 +1016,17 @@ footer {
     }
 }
 
-@media screen and (max-width: 1330px) and (min-width: 1025px){
+@media screen and (max-width: 1350px) and (min-width: 1025px){
+    
+    header > a {
+        margin-right:30px;
+    }
+    .logo {
+        padding-left:30px;
+    }
+    .research {
+        padding-left:30px;
+    }
     .foot-card-container {
         width:90%;
     }
@@ -1017,12 +1036,17 @@ footer {
 
     /*RESEARCH SECTION*/
 
+    header > a {
+        margin-right:30px;
+    }
+    .logo {
+        padding-left:30px;
+    }
     .filters > ul {
         height:75%;
         width:80%;
         flex-wrap:wrap;
-        flex-direction: column;
-        
+        flex-direction: column;        
     }
     .filters li {
         width:40%;
@@ -1040,6 +1064,7 @@ footer {
         display:flex;
         flex-direction:column;
         align-items:flex-start;
+        padding-left: 30px;
     }
     .research .filters {
         flex-direction:column;
@@ -1176,7 +1201,7 @@ footer {
         margin-bottom:20px;
     }
     .logo {
-        margin-left:20px;
+        padding-left:20px;
     }
     header > a {
         margin-left:auto;
@@ -1247,8 +1272,6 @@ footer {
         align-items:flex-start;        
     }
 }
-
-
 @media screen and (min-width: 426px) and (max-width: 525px) {
 
     /*FILTERS SECTION*/
@@ -1263,13 +1286,12 @@ footer {
         width:65%;
     }
     .research p {
-        font-size:1em;
+        font-size:0.9em;
     }
     .descritpion-popular-card {
         font-size:1.1em;
     }
 }
-
 @media screen and (min-width: 601px) and (max-width: 650px) {
 
     .descritpion-popular-card {
